labs/07-storage: Update Need to know wiki

--- a/labs/07-storage/wiki/need-to-know.wiki
+++ b/labs/07-storage/wiki/need-to-know.wiki
@@ -8,6 +8,6 @@
 ==== Montare/Demontare ====
   - Montați fișierul ''image.iso'' la calea ''/mnt/my_image/'' (hint: ''mount -o loop''). Asigurați-vă că
   directorul ''my_image'' există.
-  - Cu ajutorul comenzii ''mount'' inspectați dacă operația ''moun'' s-a efectuat cu succes.
+  - Cu ajutorul comenzii ''mount'' inspectați dacă montarea s-a efectuat cu succes.
   - Demontați imaginea. (hint: ''umount'')
 
