--- a/labs/08-net/wiki/need-to-know.wiki
+++ b/labs/08-net/wiki/need-to-know.wiki
@@ -1,2 +1,128 @@
 ===== Need to Know =====
 
+==== ssh ====
+
+Având la dispoziție mașinile virtuale ''tom'' și ''jerry'', ne propunem, ca după 
+pornirea amândurora să aflăm adresele IP. Pentru a importa cele două mașini 
+virtuale urmăriți pașii de [[ https://ocw.cs.pub.ro/courses/uso/resurse/mv#procedura_import_fisier_ova_in_virtualbox | aici]].
+
+După importarea mașinilor, deschideți în paralel mașinile virtuale ''tom'' și ''jerry''.
+
+Vrem să aflăm adresele IP ale celor 2 mașini virtuale. Pentru a face acest lucru folosim comanda 
+''ip a s'' sau comanda ''ifconfig''.
+
+<code bash>
+TODO
+</code>
+
+- Luați adresa IP de pe mașina ''tom'' și dați ping la acea adresă de pe mașina ''jerry''.
+
+Vrem să ne conectăm prin ''ssh'' de pe mașina fizică pe una dintre mașinile virtuale. Primul pas este 
+să aflăm adresa IP a mașinii virtuale.
+
+<code bash>
+
+</bash>
+
+După ce am făcut acest lucru, deschidem un terminal pe mașina fizică. Să zicem că vrem să ne conectăm 
+drept utilizatorul ''student'' pe mașina virtuală. Pentru a face acest lucru urmăriți pașii de mai jos. 
+Vi se va cere parola utilizatorului ''student'' de pe mașina virtuală care este ''student''.
+
+<code bash>
+student@uso:~$ ssh student@192.168.27.217
+TODO
+</code>
+
+<note>
+Atenție, adresa IP de mai sus va fi diferită în funcție de rețeaua în care se află vă aflați.
+</note>
+
+- Conectați-vă în același fel de pe mașina fizică pe cealaltă mașină virtuală.
+- Conectați-vă de pe mașina ''tom'' pe mașina ''jerry'' folosind ''ssh''.
+
+==== scp ====
+
+Utilitarul ''scp'' (secure copy) este folosit pentru a copia fișiere de pe o stație pe alta. Există și 
+alte utilitare cu care putem face acest lucru, însă aceasta are avantajul că datele sunt transmise sigur, 
+folosind ''ssh''.
+
+''scp'' are o sintaxă asemănătoare cu ''cp'', și anume ''scp sursă destinație''. Folosind ''scp'' putem 
+copia fișiere de pe mașina noastră pe o altă mașină, fie de pe o altă mașină direct în mașina noastră. 
+Urmăriți pașii de mai jos pentru a copia un fișier de pe mașina fizică pe mașina virtuală ''tom''.
+
+Pe mașina ''tom'':
+<code bash>
+student@tom:~$: ip a s
+TODO
+</code>
+
+Luăm adresa IP a mașinii ''tom'' și apoi pe mașina fizică:
+<code bash>
+student@tom:~$ echo "my first scp" > file.txt
+student@tom:~$ cat file.txt
+my first scp
+student@tom:~$ scp file.txt student@TOTO:.
+TODO
+</code>
+
+<note>
+Atenție, după construcția ''student@TODO'' urmează '':.''. Așa specificăm unde pe mașina ''tom'' să fie 
+copiat fișierul ''file.txt''. Dupa '':'' treceți calea din sistemul de fișiere al mașinii ''tom'' la care 
+vreți ca fișierul să fie copiat. În cazul exemplului de mai sus, ''.'' ține loc de **directorul curent** 
+care va fi ''/home/student''.
+</note>
+
+Ca să ne asigurăm că fișierul a fost transmis corect, inspectăm mașina ''tom'':
+
+<code bash>
+student@tom:~$ ls
+file.txt TODO
+student@tom:~$ cat file.txt
+my first scp
+</code>
+
+- Pe mașina virtuală ''jerry'' creați un fișier la calea TODO. Fiind pe mașina fizică, copiați acest fișier în directorul TODO.(Hint: fiți atenți sintaxa utilitarului ''scp'')
+- Copiați același fișier de mai devreme, ''file.txt'' de pe mașina fizică pe ''fep.grid.pub.ro''. Username-ul și parola sunt cele de pe platforma ''acs.curs.pub.ro''. (Hint: aici nu mai avem nevoie de adresa IP pentru ''fep.grid.pub.ro'')
+
+Conectați-vă prin ''ssh'' pe ''fep.grid.pub.ro''. Vrem să aflăm utilizatorii care sunt contectați pe ''fep.grid.pub.ro''. 
+Pentru a face acest lucru vom folosi comanda ''who''.
+
+<code bash>
+student@uso:~$ ssh mr_perfect.perfection@fep.grid.pub.ro
+TODO
+[mr_perfect.perfection@fep7-1 ~]$ who
+mihai.niculescu1606 pts/0        Nov 20 20:03 (192.168.6.10)
+mihai.niculescu1606 pts/1        Nov 20 20:01 (192.168.6.10)
+george.pirtoaca pts/2        Nov 20 21:20 (192.168.6.10)
+mihai.niculescu1606 pts/3        Nov 20 20:05 (192.168.6.10)
+liviu.muresanu pts/10       Nov 20 22:04 (192.168.6.10)
+mihai.niculescu1606 pts/14       Nov 20 19:05 (192.168.6.10)
+laurentiu.stefan97 pts/15       Nov 20 20:55 (192.168.6.10)
+bianca_mihaela.cauc pts/18       Nov 20 21:47 (192.168.6.10)
+andrei.stancu1608 pts/19       Nov 20 22:05 (192.168.6.10)
+cstaniloiu pts/20       Nov 20 22:14 (192.168.6.10)
+liza_elena.babu pts/21       Nov 20 22:23 (192.168.6.10)
+gheorghe.visinescu pts/23       Nov 20 22:16 (192.168.6.10)
+tudor_antonio.barbu pts/25       Nov 20 22:24 (192.168.6.10)
+root     pts/79       Nov 20 18:19 (192.168.6.41)
+</code>
+
+ ==== DNS ====
+
+Ne propunem să aflăm serverul DNS al sistemului fizic. Pentru a obține această informație inspectăm fișierul 
+''/etc/resolv.conf''.
+
+<code bash>
+TODO
+</code>
+
+Intrarea TODO ne arată ca DNS-ul sistemului nostru are adresa IP TODO. Putem folosi comanda ''nslookup'' să 
+vedem că adresa este într-adevăr cea din fișierul editat mai devreme.
+
+<code bash>
+TODO
+</code>
+
+- Aduceți modificări asupra fișierului ''/etc/resolv.conf'' în așa fel încât adresa DNS-ului să fie ''8.8.8.8''. Verificați faptul că adresa serverului DNS a fost modificată. (Hint: aveți nevoie de drepturi privilegiate să modificați fișierul ''/etc/resolv.conf'')
+- Folosind comanda ''host'', aflați adresa IP pentru ''www.facebook.com''.
+- Rulați scriptul ''script.sh'' de la calea ''~/uso/labs/05-cli/support/need-to-know''. Încercați să reluați exercițiul 2. Ce se întâmplă? Inspectați sistemul și rezolvați problema.
