--- a/labs/08-net/wiki/need-to-know.wiki
+++ b/labs/08-net/wiki/need-to-know.wiki
@@ -12,7 +12,41 @@ Vrem să aflăm adresele IP ale celor 2 mașini virtuale. Pentru a face acest lu
 ''ip a s'' sau comanda ''ifconfig''.
 
 <code bash>
-TODO
+student@tom:~$ ifconfig
+enp0s3: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
+        inet 192.168.56.101  netmask 255.255.255.0  broadcast 192.168.56.255
+        inet6 fe80::a00:27ff:febf:7477  prefixlen 64  scopeid 0x20<link>
+        ether 08:00:27:bf:74:77  txqueuelen 1000  (Ethernet)
+        RX packets 6284  bytes 8587309 (8.5 MB)
+        RX errors 0  dropped 0  overruns 0  frame 0
+        TX packets 3536  bytes 245502 (245.5 KB)
+        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
+
+enp0s8: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
+        inet 10.0.2.5  netmask 255.255.255.0  broadcast 10.0.2.255
+        inet6 fe80::a00:27ff:fe84:cd0a  prefixlen 64  scopeid 0x20<link>
+        ether 08:00:27:84:cd:0a  txqueuelen 1000  (Ethernet)
+        RX packets 49745  bytes 74514906 (74.5 MB)
+        RX errors 0  dropped 0  overruns 0  frame 0
+        TX packets 32084  bytes 1935578 (1.9 MB)
+        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
+
+enp0s9: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
+        inet6 fe80::a00:27ff:fe94:2ff3  prefixlen 64  scopeid 0x20<link>
+        ether 08:00:27:94:2f:f3  txqueuelen 1000  (Ethernet)
+        RX packets 0  bytes 0 (0.0 B)
+        RX errors 0  dropped 0  overruns 0  frame 0
+        TX packets 36  bytes 9194 (9.1 KB)
+        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
+
+lo: flags=73<UP,LOOPBACK,RUNNING>  mtu 65536
+        inet 127.0.0.1  netmask 255.0.0.0
+        inet6 ::1  prefixlen 128  scopeid 0x10<host>
+        loop  txqueuelen 1000  (Local Loopback)
+        RX packets 945  bytes 88159 (88.1 KB)
+        RX errors 0  dropped 0  overruns 0  frame 0
+        TX packets 945  bytes 88159 (88.1 KB)
+        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
 </code>
 
 - Luați adresa IP de pe mașina ''tom'' și dați ping la acea adresă de pe mașina ''jerry''.
@@ -21,16 +55,75 @@ Vrem să ne conectăm prin ''ssh'' de pe mașina fizică pe una dintre mașinile
 să aflăm adresa IP a mașinii virtuale.
 
 <code bash>
-
+student@tom:~$ ip a s
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+    inet 127.0.0.1/8 scope host lo
+       valid_lft forever preferred_lft forever
+    inet6 ::1/128 scope host 
+       valid_lft forever preferred_lft forever
+2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
+    link/ether 08:00:27:bf:74:77 brd ff:ff:ff:ff:ff:ff
+    inet 192.168.56.101/24 brd 192.168.56.255 scope global dynamic enp0s3
+       valid_lft 962sec preferred_lft 962sec
+    inet6 fe80::a00:27ff:febf:7477/64 scope link 
+       valid_lft forever preferred_lft forever
+3: enp0s8: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
+    link/ether 08:00:27:84:cd:0a brd ff:ff:ff:ff:ff:ff
+    inet 10.0.2.5/24 brd 10.0.2.255 scope global enp0s8
+       valid_lft forever preferred_lft forever
+    inet6 fe80::a00:27ff:fe84:cd0a/64 scope link 
+       valid_lft forever preferred_lft forever
+4: enp0s9: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
+    link/ether 08:00:27:94:2f:f3 brd ff:ff:ff:ff:ff:ff
+    inet6 fe80::a00:27ff:fe94:2ff3/64 scope link 
+       valid_lft forever preferred_lft forever
 </bash>
+
+<note>
+Observăm faptul că adresa IP a mașinii ''tom'' este ''192.168.56.101''.
+</note>
 
 După ce am făcut acest lucru, deschidem un terminal pe mașina fizică. Să zicem că vrem să ne conectăm 
 drept utilizatorul ''student'' pe mașina virtuală. Pentru a face acest lucru urmăriți pașii de mai jos. 
 Vi se va cere parola utilizatorului ''student'' de pe mașina virtuală care este ''student''.
 
 <code bash>
-student@uso:~$ ssh student@192.168.27.217
-TODO
+student@uso:~$ ssh student@192.168.56.101
+The authenticity of host '192.168.56.101 (192.168.56.101)' can't be established.
+ECDSA key fingerprint is SHA256:sqi88F/jVZ+RiHMMkLGXidACSAHlfXHos2d+gwWcqoY.
+Are you sure you want to continue connecting (yes/no)? yes
+Warning: Permanently added '192.168.56.101' (ECDSA) to the list of known hosts.
+student@192.168.56.101's password: 
+Welcome to Ubuntu 18.04.1 LTS (GNU/Linux 4.15.0-33-generic x86_64)
+
+ * Documentation:  https://help.ubuntu.com
+ * Management:     https://landscape.canonical.com
+ * Support:        https://ubuntu.com/advantage
+
+  System information as of Tue Nov 20 21:36:36 UTC 2018
+
+  System load:  0.07              Processes:             94
+  Usage of /:   50.4% of 9.78GB   Users logged in:       1
+  Memory usage: 35%               IP address for enp0s3: 192.168.56.101
+  Swap usage:   0%                IP address for enp0s8: 10.0.2.5
+
+ * Read about Ubuntu updates for L1 Terminal Fault Vulnerabilities
+   (L1TF).
+
+   - https://ubu.one/L1TF
+
+ * Check out 6 great IDEs now available on Ubuntu. There may even be
+   something worthwhile there for those crazy EMACS fans ;)
+
+   - https://bit.ly/6-cool-IDEs
+
+139 packages can be updated.
+40 updates are security updates.
+
+
+Last login: Tue Nov 20 21:28:13 2018
+student@tom:~$ 
 </code>
 
 <note>
@@ -53,20 +146,42 @@ Urmăriți pașii de mai jos pentru a copia un fișier de pe mașina fizică pe 
 Pe mașina ''tom'':
 <code bash>
 student@tom:~$: ip a s
-TODO
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+    inet 127.0.0.1/8 scope host lo
+       valid_lft forever preferred_lft forever
+    inet6 ::1/128 scope host 
+       valid_lft forever preferred_lft forever
+2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
+    link/ether 08:00:27:bf:74:77 brd ff:ff:ff:ff:ff:ff
+    inet 192.168.56.101/24 brd 192.168.56.255 scope global dynamic enp0s3
+       valid_lft 650sec preferred_lft 650sec
+    inet6 fe80::a00:27ff:febf:7477/64 scope link 
+       valid_lft forever preferred_lft forever
+3: enp0s8: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
+    link/ether 08:00:27:84:cd:0a brd ff:ff:ff:ff:ff:ff
+    inet 10.0.2.5/24 brd 10.0.2.255 scope global enp0s8
+       valid_lft forever preferred_lft forever
+    inet6 fe80::a00:27ff:fe84:cd0a/64 scope link 
+       valid_lft forever preferred_lft forever
+4: enp0s9: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP group default qlen 1000
+    link/ether 08:00:27:94:2f:f3 brd ff:ff:ff:ff:ff:ff
+    inet6 fe80::a00:27ff:fe94:2ff3/64 scope link 
+       valid_lft forever preferred_lft forever
 </code>
 
 Luăm adresa IP a mașinii ''tom'' și apoi pe mașina fizică:
 <code bash>
-student@tom:~$ echo "my first scp" > file.txt
-student@tom:~$ cat file.txt
+student@uso:~$ echo "my first scp" > file.txt
+student@uso:~$ cat file.txt
 my first scp
 student@tom:~$ scp file.txt student@TOTO:.
-TODO
+student@192.168.56.101's password: 
+file.txt                                      100%   13     9.1KB/s   00:00 
 </code>
 
 <note>
-Atenție, după construcția ''student@TODO'' urmează '':.''. Așa specificăm unde pe mașina ''tom'' să fie 
+Atenție, după construcția ''student@192.168.56.101'' urmează '':.''. Așa specificăm unde pe mașina ''tom'' să fie 
 copiat fișierul ''file.txt''. Dupa '':'' treceți calea din sistemul de fișiere al mașinii ''tom'' la care 
 vreți ca fișierul să fie copiat. În cazul exemplului de mai sus, ''.'' ține loc de **directorul curent** 
 care va fi ''/home/student''.
@@ -76,12 +191,12 @@ Ca să ne asigurăm că fișierul a fost transmis corect, inspectăm mașina ''t
 
 <code bash>
 student@tom:~$ ls
-file.txt TODO
+file.txt  uso.git  utils  vm-actions-log.txt
 student@tom:~$ cat file.txt
 my first scp
 </code>
 
-- Pe mașina virtuală ''jerry'' creați un fișier la calea TODO. Fiind pe mașina fizică, copiați acest fișier în directorul TODO.(Hint: fiți atenți sintaxa utilitarului ''scp'')
+- Pe mașina virtuală ''jerry'' creați un fișier la calea ''/home/student''. Fiind pe mașina fizică, copiați acest fișier în directorul ''~/uso/labs/05-cli/support/need-to-know''.(Hint: fiți atenți sintaxa utilitarului ''scp'')
 - Copiați același fișier de mai devreme, ''file.txt'' de pe mașina fizică pe ''fep.grid.pub.ro''. Username-ul și parola sunt cele de pe platforma ''acs.curs.pub.ro''. (Hint: aici nu mai avem nevoie de adresa IP pentru ''fep.grid.pub.ro'')
 
 Conectați-vă prin ''ssh'' pe ''fep.grid.pub.ro''. Vrem să aflăm utilizatorii care sunt contectați pe ''fep.grid.pub.ro''. 
@@ -89,7 +204,17 @@ Pentru a face acest lucru vom folosi comanda ''who''.
 
 <code bash>
 student@uso:~$ ssh mr_perfect.perfection@fep.grid.pub.ro
-TODO
+
+* IMPORTANT - PLEASE READ CAREFULLY:
+* Spatiul de stocare a ajuns la limita maxima din cauza neglijentei dvoastra. Acesta nu este un spatiu de stocare personal.
+  In data de 1.08.2018 se vor arhiva toate datele iar pe 1.09.2018 se vor sterge.
+* If you are using GPU computing and TensorFlow technology, please use CUDA_VISIBLE_DEVICES
+  to limit the number of GPUs. Otherwise, you will be banned.
+* Your sessions will be disconnected automatically after 60min on inactivity.
+  You can use "-o ServerAliveInterval 10" option if you need longer sessions.*
+mr_perfect.perfection@fep.grid.pub.ro's password: 
+Last login: Tue Nov 20 22:23:44 2018 from 192.168.6.10
+-bash: warning: setlocale: LC_CTYPE: cannot change locale (UTF-8): No such file or directory
 [mr_perfect.perfection@fep7-1 ~]$ who
 mihai.niculescu1606 pts/0        Nov 20 20:03 (192.168.6.10)
 mihai.niculescu1606 pts/1        Nov 20 20:01 (192.168.6.10)
@@ -107,20 +232,47 @@ tudor_antonio.barbu pts/25       Nov 20 22:24 (192.168.6.10)
 root     pts/79       Nov 20 18:19 (192.168.6.41)
 </code>
 
+Folosim comanda ''exit'' pentru a ne deconecta.
+
  ==== DNS ====
 
 Ne propunem să aflăm serverul DNS al sistemului fizic. Pentru a obține această informație inspectăm fișierul 
 ''/etc/resolv.conf''.
 
 <code bash>
-TODO
+student@uso:~$ cat /etc/resolv.conf
+# This file is managed by man:systemd-resolved(8). Do not edit.
+#
+# This is a dynamic resolv.conf file for connecting local clients to the
+# internal DNS stub resolver of systemd-resolved. This file lists all
+# configured search domains.
+#
+# Run "systemd-resolve --status" to see details about the uplink DNS servers
+# currently in use.
+#
+# Third party programs must not access this file directly, but only through the
+# symlink at /etc/resolv.conf. To manage man:resolv.conf(5) in a different way,
+# replace this symlink by a static file or a different symlink.
+#
+# See man:systemd-resolved.service(8) for details about the supported modes of
+# operation for /etc/resolv.conf.
+
+nameserver 141.85.0.82
+search BlinkAP
 </code>
 
-Intrarea TODO ne arată ca DNS-ul sistemului nostru are adresa IP TODO. Putem folosi comanda ''nslookup'' să 
+Intrarea ''nameserver 141.85.0.82'' ne arată ca DNS-ul sistemului nostru are adresa IP ''141.85.0.82''. 
+Putem folosi comanda ''nslookup'' să 
 vedem că adresa este într-adevăr cea din fișierul editat mai devreme.
 
 <code bash>
-TODO
+student@uso:~ $ nslookup www.google.com
+Server:		141.85.0.82
+Address:	141.85.0.82#53
+
+Non-authoritative answer:
+Name:	www.google.com
+Address: 216.58.213.196
 </code>
 
 - Aduceți modificări asupra fișierului ''/etc/resolv.conf'' în așa fel încât adresa DNS-ului să fie ''8.8.8.8''. Verificați faptul că adresa serverului DNS a fost modificată. (Hint: aveți nevoie de drepturi privilegiate să modificați fișierul ''/etc/resolv.conf'')
