--- a/labs/09-vm/wiki/demo.wiki
+++ b/labs/09-vm/wiki/demo.wiki
@@ -1,57 +1,57 @@
-===== Demo =====
+===== Demo ===== 
 
-Intrucat laboratorul de azi este despre masini virtuale, vom face un scurt demo despre lucrul cu acestea. Sectiunea de demo se aplica atat utilizatorilor ce folosesc VirtualBox, cat si celor cu VMware deoarece prezinta concepte generale.
+Întrucât laboratorul de azi este despre mașini virtuale, vom face un scurt demo despre lucrul cu acestea. Secțiunea de demo se aplică atât utilizatorilor ce folosesc VirtualBox, cât și celor cu VMware deoarece prezintă concepte generale. 
 
-==== 0. Pornirea unei masini virtuale ====
+==== 0. Pornirea unei mașini virtuale ==== 
 
-Pentru inceput, vom porni o masina virtuala, mai exact masina oficiala de USO.
+Pentru început, vom porni o mașină virtuală, mai exact mașina oficială de USO. 
 
-TODO: POZA_VM_START
+TODO: POZĂ_VM_START 
 
-Ne autentificam cu credidentialele ''student:student''.
+Ne autentificăm cu credidentialele ''student:student''. 
 
-TODO: POZA_VM_AUTH
+TODO: POZĂ_VM_AUTH 
 
-Verificam accesul la internet. Putem folosi de exemplu comanda ''ping''.
+Verificăm accesul la internet. Putem folosi de exemplu comanda ''ping''. 
 
-TODO: POZA_VM_PING
+TODO: POZĂ_VM_PING 
 
-==== 1. Vizualizarea resurselor hardware ====
+==== 1. Vizualizarea resurselor hardware ==== 
 
-Putem vedea resursele hardware are masinii folosind comenzile ''lscpu, lshw si free''. Tineti cont de faptul ca intregul hardware este virtualizat, vom vedea mai tarziu cum putem schimba acestea caracteristici din setarile masinii.
+Putem vedea resursele hardware are mașinii folosind comenzile ''lscpu, lshw și free''. Țineți cont de faptul că întregul hardware este virtualizat, vom vedea mai târziu cum putem schimba acestea caracteristici din setările mașinii. 
 
-TODO: POZA_VM_LSCPU
+TODO: POZĂ_VM_LSCPU 
 
-==== 2. Salvarea starii la inchiderea masinii ====
+==== 2. Salvarea stării la închiderea mașinii ==== 
 
-In momentul in care dorim sa inchidem masina virtuala, putem opta sa ii salvam starea. Astfel, cand vom porni masina din nou, ea se va afla in starea in care era la momentul respectiv.
+În momentul în care dorim să închidem mașina virtuală, putem opta să îi salvăm starea. Astfel, când vom porni mașina din nou, ea se va afla în starea în care era la momentul respectiv. 
 
-TODO: POZA_VM_SAVE_STATE
+TODO: POZĂ_VM_ȘAVE_STATE 
 
-==== 3. Salvarea starii prin snapshot-uri ====
+==== 3. Salvarea stării prin snapshot-uri ==== 
 
-De multe ori dorim sa putem reveni la o stare anterioara a masinii virtuale. Putem face acest lucru folosind snapshot-uri. Ele ne permit practic sa salvam starea curenta a masinii virtuale si sa o restituim ulterior. De exemplu, Microsoft ofera imagini de masini virtuale pentru dezvoltatori, dar care au licenta valabila 60 de zile. Chiar ei recomanda crearea unui snapshot pentru salvarea starii initiale. In continuare vom crea un snapshot pentru masina de USO.
+De multe ori dorim să putem reveni la o stare anterioară a mașinii virtuale. Putem face acest lucru folosind snapshot-uri. Ele ne permit practic să salvăm starea curentă a mașinii virtuale și să o restituim ulterior. De exemplu, Microsoft oferă imagini de mașini virtuale pentru dezvoltatori, dar care au licență valabilă 60 de zile. Chiar ei recomandă crearea unui snapshot pentru salvarea stării inițiale. În continuare vom crea un snapshot pentru mașina de USO. 
 
-TODO: POZA_VM_SNAPSHOT
+TODO: POZĂ_VM_SNAPSHOT 
 
-==== 4. Modificarea resurselor hardware ====
+==== 4. Modificarea resurselor hardware ==== 
 
-Dupa cum am zis mai sus, hardware-ul masinii virtuale este unul virtualizat. Astfel, noi putem defini ce CPU va avea, cata memorie RAM si asa mai departe. Dupa ce modificam caracteristicile hardware ale unei masini, o putem deschide si rula comenzile de mai sus pentru vizualizarea resurselor hardware. Vom observa ca acestea se schimba corespunzator cu setarile noastre.
+După cum am zis mai sus, hardware-ul mașinii virtuale este unul virtualizat. Astfel, noi putem defini ce CPU va avea, câtă memorie RAM și așa mai departe. După ce modificăm caracteristicile hardware ale unei mașini, o putem deschide și rula comenzile de mai sus pentru vizualizarea resurselor hardware. Vom observa că acestea se schimbă corespunzător cu setările noastre. 
 
-TODO: POZA_VM_MODIF_HARDWARE
+TODO: POZĂ_VM_MODIF_HARDWARE 
 
-==== 5. Interfete de retea ====
+==== 5. Interfețe de rețea ==== 
 
-Masina virtuala comunica cu masina gazda (fizica) prin interfata de retea ''host-only''. Pentru a ne convinge de acest lucru, putem da ping de pe masina fizica pe masina virtuala. Initial cu interfata host-only activata, iar ulterior cu ea dezactivata. Vom observa ca in al doilea caz, ping-ul nu va merge.
+Mașina virtuală comunică cu mașină gazdă (fizică) prin interfața de rețea ''host-only''. Pentru a ne convinge de acest lucru, putem da ping de pe mașina fizică pe mașina virtuală. Inițial cu interfața host-only activată, iar ulterior cu ea dezactivată. Vom observa că în al doilea caz, ping-ul nu va merge. 
 
-TODO: POZA_VM_HOST_ONLY
-TODO: POZE_VM_PING_DEZACT
+TODO: POZĂ_VM_HOST_ONLY 
+TODO: POZE_VM_PING_DEZACT 
 
-==== 6. SSH pe masina virtuala ====
+==== 6. SSH pe mașina virtuală ==== 
 
-De multe ori ne este mai comod sa ne conectam prin ssh pentru a lucra pe o masina virtuala. De exemplu pentru o masina virtuala aflata in cloud, acesta este singurul mod de a o accesa. Pentru acest exemplu vom folosi clusterul facultatii ''fep.grid.pub.ro'', dar se putea folosi in loc si o masina virtuala locala.
+De multe ori ne este mai comod să ne conectăm prin ssh pentru a lucra pe o mașină virtuală. De exemplu pentru o mașină virtuală aflată în cloud, acesta este singurul mod de a o accesa. Pentru acest exemplu vom folosi clusterul facultății ''fep.grid.pub.ro'', dar se putea folosi în loc și o mașină virtuală locală. 
 
-TODO: POZA_SSH_FEP
+TODO: POZĂ_SSH_FEP 
 
 
 
