[basics] added T for basics +  screenshots

--- a/labs/09-vm/wiki/basics.wiki
+++ b/labs/09-vm/wiki/basics.wiki
@@ -2,12 +2,49 @@
 
 ==== 1. Importarea unei mașini virtuale ====  
 
-**[1a]** Descărcați mașina virtuală de [[http://elf.cs.pub.ro/uso/res/laborator/lab09/Tiny%20Linux%20VM.ova|aici]]. Pentru a o importa, deschideți VirtualBox, apoi ''File -> Import Appliance'' și selectați fișierul .ova. 
+Descărcați mașina virtuală de [[http://elf.cs.pub.ro/uso/res/laborator/lab09/Tiny%20Linux%20VM.ova|aici]]. 
+Pentru a o importa, deschideți VirtualBox, apoi ''File -> Import Appliance'' și selectați fișierul .ova 
+anterior descărcat.
 
-**[1b]** Creați în directorul de home un fișier ''nume.txt'' în care vă treceți numele vostru. 
+<note important>
+Aveți grijă să bifați opțiunea ''Reinitialize the MAC address of all network cards'' la importarea mașinii virtuale.
+</note>
 
-**[1c]** Faceți un snapshot în starea curentă. 
+După ce ați importat mașina virtuală, deschideți-o și verificați că funcționează.
 
-**[1d]** Ștergeți fișierul ''nume.txt''. 
+==== Snapshots ====
 
-**[1e]** Reveniți la starea salvată în snapshot și verificați existența fișierului ''nume.txt''. 
+Câteodată vrem să facem modificări asupra unei mașini virtuale (să adăugăm noi fișiere, să instalăm un 
+nou program, etc), dar în același timp vrem să putem cumva reveni la starea anterioară a mașinii. Acest lucru poate 
+fi făcut prin intermediul **snapshot-ului**. 
+
+Un **snapshot** reprezintă, de fapt, starea de la un moment de timp al unei mașini virtuale, utilizatorul putând reveni 
+la aceasta fără a face ''undo'' la ceea ce a modificat între timp. 
+
+Pe mașina virtuală anterior importată urmăriți pașii de mai jos pentru a realiza un snapshot.
+Creați în directorul ''/home/tc'' un fișier ''nume.txt'' în care vă treceți numele vostru. 
+
+<code bash>
+tc@box:~ $ echo "Student Silitor" > nume.txt
+tc@box:~ $ ls
+author  nume.txt
+tc@box:~ $ cat nume.txt
+Student Silitor
+</code>
+
+Faceți un snapshot în starea curentă după care stergeți fișierul ''nume.txt''. Scopul nostru este să revenim la starea 
+mașinii virtuale când încă aveam fișierul acolo.
+
+TODO: snapshot 1
+
+Pentru a reveni la starea anterioară duceți-vă în VirtualBox, selectați mașina virtuală curentă după care apăsați butonul 
+"Machine Tools"
+
+TODO: snapshot 2
+
+Acolo aveți două opțiuni: ''Details'' și ''Snapshots''. Alegeți opțiunea ''Snapshots''. Veți avea un output asemănător cu:
+
+TODO: snapshot 3
+
+    - Porniți acum mașina virtuală pornind de la snapshot-ul creat de voi. Dacă totul a decurs cum trebuie, la pornirea mașinii 
+    virtuale trebuie să vedeți din nou fișierul ''nume.txt''.
