Remove 'propii' so we don't confuse students
As per dexonline (the last sentence is what matters), 

*própriŭ, -ie adj. (lat. proprius). Al fie-căruĭa în parte, personal: fie-care ființă are caracterele sale propriĭ. Care e chear al persoaneĭ: a scrie cu propria sa mînă. Fără nicĭ o schimbare, exact: propriile luĭ vorbe. Convenabil, potrivit, bun: lemn propriŭ la construcțiunĭ, om propriŭ adacerilor. Nume propriŭ, personal (individual), în opoz. cu comun. Înțeles propriŭ, primitiv și natural, în opoz. cu figurat. Cuvînt propriŭ, expresiune proprie, care redă exact ideĭa. Astr. Mișcare proprie, mișcare reală a unuĭ astru, în opoz. cu aparență. Adv. În mod propriŭ: propriŭ vorbind, China propriŭ zisă. – Mulțĭ ignoranțĭ zic propiŭ, precum, din contra, zic proprice îld. propice.

--- a/labs/05-cli/wiki/demo.wiki
+++ b/labs/05-cli/wiki/demo.wiki
@@ -331,7 +331,7 @@ Jerry_the_best
 </code>
 
 Un alt caz în care expandarea este utilă este evaluarea expresiilor aritmetice. Pentru început, declarăm 2 
-variabile propii în shell:
+variabile în shell:
 
 <code bash>
 student@uso:~/uso.git/$ a=3
